HK2_2018-2019/cs162/W08/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:45:44 **** Build of configuration Debug for project Ex01 ****
make all 
Building file: ../18125130_Ex01.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"18125130_Ex01.d" -MT"18125130_Ex01.o" -o "18125130_Ex01.o" "../18125130_Ex01.cpp"
../18125130_Ex01.cpp: In function ‘int main()’:
../18125130_Ex01.cpp:10:2: error: ‘init’ was not declared in this scope
  init();
  ^~~~
../18125130_Ex01.cpp:10:2: note: suggested alternative: ‘intit’
  init();
  ^~~~
  intit
subdir.mk:21: recipe for target '18125130_Ex01.o' failed
make: *** [18125130_Ex01.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
14:45:57 **** Incremental Build of configuration Debug for project Ex01 ****
make all 
Building file: ../18125130_Ex01.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"18125130_Ex01.d" -MT"18125130_Ex01.o" -o "18125130_Ex01.o" "../18125130_Ex01.cpp"
Finished building: ../18125130_Ex01.cpp
 
Building file: ../function.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"function.d" -MT"function.o" -o "function.o" "../function.cpp"
Finished building: ../function.cpp
 
Building target: Ex01
Invoking: Cross G++ Linker
g++  -o "Ex01"  ./18125130_Ex01.o ./function.o   
Finished building target: Ex01
 
14:46:04 **** Incremental Build of configuration Debug for project Ex01 ****
make all 
make: Nothing to be done for 'all'.
14:48:25 **** Incremental Build of configuration Debug for project Ex01 ****
make all 
Building file: ../function.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"function.d" -MT"function.o" -o "function.o" "../function.cpp"
Finished building: ../function.cpp
 
Building target: Ex01
Invoking: Cross G++ Linker
g++  -o "Ex01"  ./18125130_Ex01.o ./function.o   
Finished building target: Ex01
 
14:48:39 **** Incremental Build of configuration Debug for project Ex01 ****
make all 
Building file: ../function.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"function.d" -MT"function.o" -o "function.o" "../function.cpp"
Finished building: ../function.cpp
 
Building target: Ex01
Invoking: Cross G++ Linker
g++  -o "Ex01"  ./18125130_Ex01.o ./function.o   
Finished building target: Ex01
 
14:51:02 **** Incremental Build of configuration Debug for project Ex01 ****
make all 
Building file: ../function.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"function.d" -MT"function.o" -o "function.o" "../function.cpp"
Finished building: ../function.cpp
 
Building target: Ex01
Invoking: Cross G++ Linker
g++  -o "Ex01"  ./18125130_Ex01.o ./function.o   
Finished building target: Ex01
 
14:52:04 **** Incremental Build of configuration Debug for project Ex01 ****
make all 
Building file: ../function.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"function.d" -MT"function.o" -o "function.o" "../function.cpp"
Finished building: ../function.cpp
 
Building target: Ex01
Invoking: Cross G++ Linker
g++  -o "Ex01"  ./18125130_Ex01.o ./function.o   
Finished building target: Ex01
 
14:52:16 **** Incremental Build of configuration Debug for project Ex01 ****
make all 
Building file: ../function.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"function.d" -MT"function.o" -o "function.o" "../function.cpp"
Finished building: ../function.cpp
 
Building target: Ex01
Invoking: Cross G++ Linker
g++  -o "Ex01"  ./18125130_Ex01.o ./function.o   
Finished building target: Ex01
 
14:53:29 **** Incremental Build of configuration Debug for project Ex01 ****
make all 
make: Nothing to be done for 'all'.
14:53:30 **** Incremental Build of configuration Debug for project Ex01 ****
make all 
make: Nothing to be done for 'all'.
